@@ -1,27 +1,27 @@
 package com.jorgemonteiro.home_app.model.adapter.shopping;
 
+import com.jorgemonteiro.home_app.model.dtos.shared.*;
 import com.jorgemonteiro.home_app.model.dtos.shopping.*;
 import com.jorgemonteiro.home_app.model.entities.shopping.*;
+import com.jorgemonteiro.home_app.service.media.PhotoService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
 import java.math.BigDecimal;
-import java.time.LocalDate;
-import java.time.LocalDateTime;
-import java.util.stream.Collectors;
+import java.util.Map;
+import java.util.Collections;
+
 /**
- * Adapter for converting between shopping entities and DTOs.
- * Pure data transformer — no I/O or repository calls.
+ * Adapter class that converts between shopping entities and DTOs.
  */
 @Component
 @RequiredArgsConstructor
 public class ShoppingAdapter {
 
-    /**
-     * Converts a {@link ShoppingCategory} entity to a {@link ShoppingCategoryDTO}.
-     * @param entity the category entity
-     * @return the category DTO
-     */
+    private final PhotoService photoService;
+
+    // --- Categories ---
+
     public ShoppingCategoryDTO toCategoryDTO(ShoppingCategory entity) {
         if (entity == null) return null;
         ShoppingCategoryDTO dto = new ShoppingCategoryDTO();
@@ -33,11 +33,6 @@ public class ShoppingAdapter {
         return dto;
     }
 
-    /**
-     * Converts a {@link ShoppingCategoryDTO} to a {@link ShoppingCategory} entity.
-     * @param dto the category DTO
-     * @return the category entity
-     */
     public ShoppingCategory toCategoryEntity(ShoppingCategoryDTO dto) {
         if (dto == null) return null;
         ShoppingCategory entity = new ShoppingCategory();
@@ -45,24 +40,26 @@ public class ShoppingAdapter {
         entity.setName(dto.getName());
         entity.setDescription(dto.getDescription());
         entity.setIcon(dto.getIcon());
-        entity.setVersion(dto.getVersion());
+        entity.setVersion(entity.getVersion());
         return entity;
     }
 
-    /**
-     * Converts a {@link ShoppingItem} entity to a {@link ShoppingItemDTO}.
-     * @param entity the item entity
-     * @return the item DTO
-     */
+    // --- Items ---
+
     public ShoppingItemDTO toItemDTO(ShoppingItem entity) {
         if (entity == null) return null;
         ShoppingItemDTO dto = new ShoppingItemDTO();
         dto.setId(entity.getId());
         dto.setName(entity.getName());
-        dto.setPhoto(entity.getPhoto());
+        dto.setUnit(entity.getUnit());
+        dto.setPcQuantity(entity.getPcQuantity());
+        dto.setPcUnit(entity.getPcUnit());
+        dto.setNutritionSampleSize(entity.getNutritionSampleSize());
+        dto.setNutritionSampleUnit(entity.getNutritionSampleUnit());
+        dto.setPhoto(new PhotoDTO(null, photoService.getPhotoUrl(entity.getPhoto())));
         dto.setVersion(entity.getVersion());
         if (entity.getCategory() != null) {
-            dto.setCategory(new ShoppingItemDTO.Category(
+            dto.setCategory(new CategorySummaryDTO(
                 entity.getCategory().getId(),
                 entity.getCategory().getName(),
                 entity.getCategory().getIcon()
@@ -71,23 +68,27 @@ public class ShoppingAdapter {
         return dto;
     }
 
-    /**
-     * Converts a {@link ShoppingItemDTO} to a {@link ShoppingItem} entity.
-     * Note: The category must be set manually after conversion.
-     * @param dto the item DTO
-     * @return the item entity
-     */
     public ShoppingItem toItemEntity(ShoppingItemDTO dto) {
         if (dto == null) return null;
         ShoppingItem entity = new ShoppingItem();
         entity.setId(dto.getId());
         entity.setName(dto.getName());
-        entity.setPhoto(dto.getPhoto());
+        entity.setUnit(dto.getUnit() != null ? dto.getUnit() : "pcs");
+        entity.setPcQuantity(dto.getPcQuantity());
+        entity.setPcUnit(dto.getPcUnit());
+        
+        if (dto.getNutritionSampleSize() != null) {
+            entity.setNutritionSampleSize(dto.getNutritionSampleSize());
+        }
+        if (dto.getNutritionSampleUnit() != null) {
+            entity.setNutritionSampleUnit(dto.getNutritionSampleUnit());
+        }
+        
         entity.setVersion(dto.getVersion());
         return entity;
     }
 
-    // --- Store Methods ---
+    // --- Stores ---
 
     public ShoppingStoreDTO toStoreDTO(ShoppingStore entity) {
         if (entity == null) return null;
@@ -96,19 +97,8 @@ public class ShoppingAdapter {
         dto.setName(entity.getName());
         dto.setDescription(entity.getDescription());
         dto.setIcon(entity.getIcon());
-        dto.setPhoto(entity.getPhoto());
+        dto.setPhoto(new PhotoDTO(null, photoService.getPhotoUrl(entity.getPhoto())));
         dto.setVersion(entity.getVersion());
-
-        if (entity.getCoupons() != null) {
-            LocalDateTime now = LocalDateTime.now();
-            long count = entity.getCoupons().stream()
-                    .filter(c -> !c.isUsed() && (c.getDueDate() == null || c.getDueDate().isAfter(now)))
-                    .count();
-            dto.setValidCouponsCount((int) count);
-        } else {
-            dto.setValidCouponsCount(0);
-        }
-
         return dto;
     }
 
@@ -119,38 +109,30 @@ public class ShoppingAdapter {
         entity.setName(dto.getName());
         entity.setDescription(dto.getDescription());
         entity.setIcon(dto.getIcon());
-        entity.setPhoto(dto.getPhoto());
         entity.setVersion(dto.getVersion());
         return entity;
     }
 
-    // --- LoyaltyCard Methods ---
+    // --- Loyalty Cards ---
 
     public LoyaltyCardDTO toLoyaltyCardDTO(LoyaltyCard entity) {
         if (entity == null) return null;
         LoyaltyCardDTO dto = new LoyaltyCardDTO();
         dto.setId(entity.getId());
         dto.setName(entity.getName());
+        dto.setBarcode(new LoyaltyCardDTO.Barcode(entity.getNumber(), entity.getBarcodeType()));
         dto.setVersion(entity.getVersion());
         if (entity.getStore() != null) {
-            dto.setStore(new LoyaltyCardDTO.Store(
-                entity.getStore().getId(),
-                entity.getStore().getName()
-            ));
-        }
-        if (entity.getNumber() != null && entity.getBarcodeType() != null) {
-            dto.setBarcode(new LoyaltyCardDTO.Barcode(
-                entity.getNumber(),
-                entity.getBarcodeType()
-            ));
+            dto.setStore(new StoreSummaryDTO(entity.getStore().getId(), entity.getStore().getName(), photoService.getPhotoUrl(entity.getStore().getPhoto())));
         }
         return dto;
     }
 
-    public LoyaltyCard toLoyaltyCardEntity(LoyaltyCardDTO dto) {
+    public LoyaltyCard toLoyaltyCardEntity(LoyaltyCardDTO dto, ShoppingStore store) {
         if (dto == null) return null;
         LoyaltyCard entity = new LoyaltyCard();
         entity.setId(dto.getId());
+        entity.setStore(store);
         entity.setName(dto.getName());
         if (dto.getBarcode() != null) {
             entity.setNumber(dto.getBarcode().getCode());
@@ -160,43 +142,37 @@ public class ShoppingAdapter {
         return entity;
     }
 
-    // --- Coupon Methods ---
+    // --- Coupons ---
 
     public CouponDTO toCouponDTO(Coupon entity) {
         if (entity == null) return null;
         CouponDTO dto = new CouponDTO();
         dto.setId(entity.getId());
+        if (entity.getStore() != null) {
+            dto.setStore(new StoreSummaryDTO(entity.getStore().getId(), entity.getStore().getName(), photoService.getPhotoUrl(entity.getStore().getPhoto())));
+        }
         dto.setName(entity.getName());
         dto.setDescription(entity.getDescription());
         dto.setValue(entity.getValue());
-        dto.setPhoto(entity.getPhoto());
+        dto.setPhoto(new PhotoDTO(null, photoService.getPhotoUrl(entity.getPhoto())));
         dto.setDueDate(entity.getDueDate() != null ? entity.getDueDate().toLocalDate() : null);
+        dto.setBarcode(new CouponDTO.Barcode(entity.getCode(), entity.getBarcodeType()));
         dto.setUsed(entity.isUsed());
         dto.setVersion(entity.getVersion());
-        if (entity.getStore() != null) {
-            dto.setStore(new CouponDTO.Store(
-                entity.getStore().getId(),
-                entity.getStore().getName()
-            ));
-        }
-        if (entity.getCode() != null && entity.getBarcodeType() != null) {
-            dto.setBarcode(new CouponDTO.Barcode(
-                entity.getCode(),
-                entity.getBarcodeType()
-            ));
-        }
         return dto;
     }
 
-    public Coupon toCouponEntity(CouponDTO dto) {
+    public Coupon toCouponEntity(CouponDTO dto, ShoppingStore store) {
         if (dto == null) return null;
         Coupon entity = new Coupon();
         entity.setId(dto.getId());
+        entity.setStore(store);
         entity.setName(dto.getName());
         entity.setDescription(dto.getDescription());
         entity.setValue(dto.getValue());
-        entity.setPhoto(dto.getPhoto());
-        entity.setDueDate(dto.getDueDate() != null ? dto.getDueDate().atStartOfDay() : null);
+        if (dto.getDueDate() != null) {
+            entity.setDueDate(dto.getDueDate().atStartOfDay());
+        }
         if (dto.getBarcode() != null) {
             entity.setCode(dto.getBarcode().getCode());
             entity.setBarcodeType(dto.getBarcode().getType());
@@ -206,38 +182,29 @@ public class ShoppingAdapter {
         return entity;
     }
 
-    // --- Shopping List Methods ---
+    // --- Lists ---
 
     public ShoppingListDTO toListDTO(ShoppingList entity) {
-        return toListDTO(entity, java.util.Collections.emptyMap());
+        return toListDTO(entity, Collections.emptyMap());
     }
 
-    /**
-     * @param previousPrices map keyed by "itemId:storeId" (storeId may be "null") → previous price
-     */
-    public ShoppingListDTO toListDTO(ShoppingList entity, java.util.Map<String, BigDecimal> previousPrices) {
+    public ShoppingListDTO toListDTO(ShoppingList entity, Map<String, BigDecimal> previousPriceMap) {
         if (entity == null) return null;
         ShoppingListDTO dto = new ShoppingListDTO();
         dto.setId(entity.getId());
         dto.setName(entity.getName());
         dto.setDescription(entity.getDescription());
         dto.setStatus(entity.getStatus());
+        dto.setCreatedBy(entity.getCreatedBy().getEmail());
+        dto.setCreatorName(entity.getCreatedBy().getFirstName() + " " + entity.getCreatedBy().getLastName());
         dto.setCreatedAt(entity.getCreatedAt());
         dto.setCompletedAt(entity.getCompletedAt());
         dto.setVersion(entity.getVersion());
-
-        if (entity.getCreatedBy() != null) {
-            dto.setCreatedBy(entity.getCreatedBy().getEmail());
-            dto.setCreatorName(entity.getCreatedBy().getFirstName() + " " + entity.getCreatedBy().getLastName());
-        }
-
         if (entity.getItems() != null) {
-            dto.setItems(entity.getItems().stream().map(item -> {
-                String key = item.getItem().getId() + ":" + (item.getStore() != null ? item.getStore().getId() : "null");
-                return toListItemDTO(item, previousPrices.get(key));
-            }).collect(Collectors.toList()));
+            dto.setItems(entity.getItems().stream()
+                .map(item -> toListItemDTO(item, previousPriceMap))
+                .toList());
         }
-
         return dto;
     }
 
@@ -252,54 +219,57 @@ public class ShoppingAdapter {
         return entity;
     }
 
-    public ShoppingItemPriceHistoryDTO toPriceHistoryDTO(ShoppingItemPriceHistory entity) {
-        if (entity == null) return null;
-        ShoppingItemPriceHistoryDTO dto = new ShoppingItemPriceHistoryDTO();
-        dto.setId(entity.getId());
-        dto.setPrice(entity.getPrice());
-        dto.setRecordedAt(entity.getRecordedAt());
-        if (entity.getStore() != null) {
-            dto.setStoreId(entity.getStore().getId());
-            dto.setStoreName(entity.getStore().getName());
-        }
-        return dto;
-    }
+    // --- List Items ---
 
     public ShoppingListItemDTO toListItemDTO(ShoppingListItem entity) {
-        return toListItemDTO(entity, null);
+        return toListItemDTO(entity, Collections.emptyMap());
     }
 
-    public ShoppingListItemDTO toListItemDTO(ShoppingListItem entity, BigDecimal previousPrice) {
+    public ShoppingListItemDTO toListItemDTO(ShoppingListItem entity, Map<String, BigDecimal> previousPriceMap) {
         if (entity == null) return null;
         ShoppingListItemDTO dto = new ShoppingListItemDTO();
         dto.setId(entity.getId());
-        dto.setQuantity(entity.getQuantity());
-        dto.setUnit(entity.getUnit());
-        dto.setPrice(entity.getPrice());
-        dto.setBought(entity.isBought());
-        dto.setUnavailable(entity.isUnavailable());
-        dto.setVersion(entity.getVersion());
-        dto.setPreviousPrice(previousPrice);
-
-        if (entity.getItem() != null) {
-            dto.setItemId(entity.getItem().getId());
-            dto.setItemName(entity.getItem().getName());
-            dto.setItemPhoto(entity.getItem().getPhoto());
-            if (entity.getItem().getCategory() != null) {
-                dto.setCategory(new ShoppingListItemDTO.Category(
-                    entity.getItem().getCategory().getName(),
-                    entity.getItem().getCategory().getIcon()
-                ));
-            }
+        
+        CategorySummaryDTO category = null;
+        if (entity.getItem().getCategory() != null) {
+            category = new CategorySummaryDTO(
+                entity.getItem().getCategory().getName(),
+                entity.getItem().getCategory().getIcon()
+            );
         }
 
+        ItemSummaryDTO itemSummary = new ItemSummaryDTO(
+            entity.getItem().getId(),
+            entity.getItem().getName(),
+            photoService.getPhotoUrl(entity.getItem().getPhoto()),
+            entity.getItem().getUnit(),
+            entity.getItem().getPcQuantity(),
+            entity.getItem().getPcUnit()
+        );
+        itemSummary.setCategory(category);
+
+        dto.setItem(itemSummary);
+        dto.setUnit(entity.getUnit());
+        
         if (entity.getStore() != null) {
-            dto.setStore(new ShoppingListItemDTO.Store(
+            dto.setStore(new StoreSummaryDTO(
                 entity.getStore().getId(),
-                entity.getStore().getName()
+                entity.getStore().getName(),
+                photoService.getPhotoUrl(entity.getStore().getPhoto())
             ));
         }
 
+        dto.setQuantity(entity.getQuantity());
+        
+        String key = entity.getItem().getId() + (entity.getStore() != null ? ":" + entity.getStore().getId() : "");
+        dto.setPricing(new ShoppingListItemDTO.Pricing(
+            entity.getPrice(),
+            previousPriceMap.get(key)
+        ));
+
+        dto.setBought(entity.isBought());
+        dto.setUnavailable(entity.isUnavailable());
+        dto.setVersion(entity.getVersion());
         return dto;
     }
 
@@ -309,10 +279,32 @@ public class ShoppingAdapter {
         entity.setId(dto.getId());
         entity.setQuantity(dto.getQuantity());
         entity.setUnit(dto.getUnit());
-        entity.setPrice(dto.getPrice());
-        entity.setBought(Boolean.TRUE.equals(dto.getBought()));
-        entity.setUnavailable(Boolean.TRUE.equals(dto.getUnavailable()));
+        
+        if (dto.getPricing() != null) {
+            entity.setPrice(dto.getPricing().getPrice());
+        }
+        
+        entity.setBought(dto.getBought() != null ? dto.getBought() : false);
+        entity.setUnavailable(dto.getUnavailable() != null ? dto.getUnavailable() : false);
         entity.setVersion(dto.getVersion());
         return entity;
+    }
+
+    // --- Price History ---
+
+    public ShoppingItemPriceHistoryDTO toPriceHistoryDTO(ShoppingItemPriceHistory entity) {
+        if (entity == null) return null;
+        ShoppingItemPriceHistoryDTO dto = new ShoppingItemPriceHistoryDTO();
+        dto.setId(entity.getId());
+        if (entity.getStore() != null) {
+            dto.setStore(new StoreSummaryDTO(
+                    entity.getStore().getId(),
+                    entity.getStore().getName(),
+                    photoService.getPhotoUrl(entity.getStore().getPhoto())
+            ));
+        }
+        dto.setPrice(entity.getPrice());
+        dto.setRecordedAt(entity.getRecordedAt());
+        return dto;
     }
 }
